# Litetify-Dev

./: .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  DEVIATIONS.md  LITETIFY-AUDIT-REPORT.md  PLAN.md  PRODUCT.md  README.md  RELEASE.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  vite.config.ts
.github/workflows/: ci.yml
.impeccable/: design.json
.planning/: 00-REVIEW.md  03ac9e4f-REVIEW-PLAYER.md  03ac9e4f-REVIEW-RUST.md  03ac9e4f-REVIEW-VIEWS.md  05-REVIEW.md  3ac9e4f-REVIEW-RUST.md  3ac9e4f-REVIEW-VIEWS.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  MODDING.md  PERF.md  SECURITY.md  TESTING.md
mods/catppuccin-frappe/: manifest.json  theme.css
mods/catppuccin-latte/: manifest.json  theme.css
mods/catppuccin-macchiato/: manifest.json  theme.css
mods/catppuccin-mocha/: manifest.json  theme.css
mods/examples/: README.md
mods/examples/dark-theme/: manifest.json  theme.css
mods/examples/skip-to-favorite/: extension.js  manifest.json
mods/examples/stats-app/: app.js  manifest.json
src/: App.tsx  smoke.test.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/auth/: mod.rs  pkce.rs  server.rs  tokens.rs
src-tauri/src/mods/: mod.rs
src-tauri/src/playback/: librespot.rs  mod.rs  websdk.rs
src/app/: Sidebar.tsx
src/features/auth/: LoginScreen.tsx  authStore.ts
src/features/browse/: HomeView.tsx
src/features/contextmenu/: ContextMenu.tsx  TrackMenuButton.tsx  contextMenuStore.ts
src/features/pins/: pinsStore.ts
src/features/player/: AutoQueueToggle.tsx  DeviceSelector.tsx  MiniPlayer.tsx  MiniPlayerView.tsx  NowPlayingBar.tsx  NowPlayingInfo.tsx  NowPlayingView.tsx  OfflineBanner.tsx  PlaybackTimerBadge.tsx  PlayerInitializer.tsx  ProgressBar.tsx  SleepTimer.tsx  TransportControls.tsx  VolumeControl.tsx  autoQueue.ts  crossfade.ts  playbackTimer.ts  playerStore.ts  useAutoQueue.ts  useMediaSession.ts  usePlaybackTimer.ts
src/features/player/__tests__/: playerStore.test.ts
src/features/podcasts/: PodcastView.tsx
src/features/search/: SearchView.tsx
src/features/settings/: EqualizerSettings.tsx  Keybindings.tsx  Mods.tsx  Permissions.tsx  Playback.tsx  SettingsView.tsx  Toast.tsx
src/features/stats/: StatsView.tsx
src/lib/: ErrorBoundary.tsx  ViewState.tsx  api.ts  keybindings.ts  offline.ts  types.ts  useKeyboardShortcuts.ts  utils.ts
src/lib/queries/: useAlbum.ts  useArtist.ts  useBrowse.ts  useHome.ts  useLikedTracks.ts  useMe.ts  usePlayer.ts  usePlaylist.ts  usePlaylistTracks.ts  usePlaylists.ts  useSearch.ts  useShows.ts
src/mods/: api.ts  apps.tsx  components.tsx  index.ts  loader.ts  manifest.ts  sandbox.ts  store.ts  themes.ts
src/playback/: engine.ts  librespot.ts  websdk.ts
src/styles/: global.css  tokens.css
