[package]
name = "litetify"
version = "0.1.0"
description = "A lightweight, performant, moddable Spotify Premium desktop client."
authors = ["Litetify contributors"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "litetify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# librespot native-audio engine is OPT-IN and OFF by default (see plan Phase 6).
default = []
librespot = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
